# TheSideKick

./: .env.sample  .gitignore  README.md  app.py  main.py  pyproject.toml  sidekick.py
sandbox/: Tree_Nocturnal_Nutrition.md  agentic_ai_notes.md
utils/: constants.py  env_helper.py  persistence.py  sidekick_tools.py
