[project]
name = "thesidekick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.14.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langgraph>=1.2.1",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
]
